Bug 271058 Remove deprecated Transport method